--- a/views/admin/item/edit_item.ejs
+++ b/views/admin/item/edit_item.ejs
@@ -17,7 +17,7 @@
         <div class="form-group">
           <label for="category">Category</label>
           <select class="form-control" name="categoryId">
-            <option value="<%= item.categoryId.id %>">-- <%= item.categoryId.name %> --</option>
+            <option value="<%= item.categoryId._id %>">-- <%= item.categoryId.name %> --</option>
             <% for(let i = 0; i < category.length; i++) { %>
             <option value="<%= category[i].id %>"><%= category[i].name %></option>
             <% } %>
