--- a/views/admin/item/detail_item/show_feature.ejs
+++ b/views/admin/item/detail_item/show_feature.ejs
@@ -46,7 +46,7 @@
                   <td><%= feature[i].name %></td>
                   <td><%= feature[i].qty %></td>
                   <td>
-                    <img src="https://bwa-server-staycation-eight.vercel.app/<%= feature[i].imageUrl %>" alt="imageUrl" height="70px" width="70px">
+                    <img src="http://localhost:3001/<%= feature[i].imageUrl %>" alt="imageUrl" height="70px" width="70px">
                   </td>
                   <td>
                     <form action="/admin//item/<%= itemId %>/feature/<%= feature[i].id %>?_method=DELETE" method="POST">
