--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -14,7 +14,7 @@
 
   <!-- Nav Item - Dashboard -->
   <li class="nav-item">
-    <a class="nav-link" href="/admin/dashboard">
+    <a class="nav-link active" href="/admin/dashboard">
       <i class="fas fa-fw fa-tachometer-alt"></i>
       <span>Dashboard</span></a>
   </li>
