feat: env config

--- a/views/admin/item/show_image_item.ejs
+++ b/views/admin/item/show_image_item.ejs
@@ -6,7 +6,7 @@
     <div class="col-md-4">
       <div class="card shadow mb-4 mt-4">
         <div class="card-body">
-          <img src="http://localhost:3001/<%= item.imageId[x].imageUrl%>" alt="image" style="width: 100%; display: block;" />
+          <img src="<%= baseUrl %>/<%= item.imageId[x].imageUrl%>" alt="image" style="width: 100%; display: block;" />
         </div>
       </div>
     </div>
