--- a/views/admin/booking/show_table_booking.ejs
+++ b/views/admin/booking/show_table_booking.ejs
@@ -7,7 +7,7 @@
   <div class="card-body">
     <div class="row">
       <div class="col-md-4">
-        <img src="http://localhost:3001/<%= booking.payments.proofPayment %>" alt="image" style="width: 100%; display: block;" />
+        <img src="<%= baseUrl %>/<%= booking.payments.proofPayment %>" alt="image" style="width: 100%; display: block;" />
         <div class="row m-1">
           <% if( booking.payments.status === 'Proses') { %>
           <form action="/admin/booking/<%= booking.id %>/confirmation?_method=PUT" method="POST">
