--- a/views/admin/item/add_item.ejs
+++ b/views/admin/item/add_item.ejs
@@ -25,7 +25,7 @@
         </div>
         <div class="form-group">
           <label for="image">Image</label>
-          <input type="file" class="form-control" name="image" multiple required>
+          <input type="file" class="form-control" name="images" multiple required>
         </div>
         <div class="form-group">
           <label for="about">Description</label>
